--- a/proposal.css
+++ b/proposal.css
@@ -1,253 +1,182 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-body{
-				background: white;
-				font-family: Poppins;
+/* SAFE RESET (di apektado JS) */
+*{
+	box-sizing: border-box;
 }
 
+/* BODY */
+body{
+	font-family: Poppins;
+	margin: 0;
+	padding: 0;
+	background: url('qt/bg1.gif') no-repeat center center fixed;
+	background-size: cover;
+	min-height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+}
 
+/* MAIN */
 .g1{
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				flex-direction: column;
-				position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	position: relative;
+	padding: 1em;
+}
+
+/* IMAGES */
+.images1{
+	position: absolute;
+	top: 0;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 1em;
+	margin: 0 1em;
+	max-width: 320px;
+	width: 100%;
 }
 
 .images1 img{
-				width: 150px;
+	width: 100%;
+	max-width: 130px;   /* dati 150px */
+	height: auto;
 }
 
-.images1{
-				position: absolute;
-				top: 0;
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-				gap:2em;
-				margin-left: 1em;
-				margin-right: 1em;
-}
-
+/* NO BUTTON GRID */
 .group1{
-				display: grid;
-				grid-template-columns: 1fr 1fr 1fr ;
-				gap:2em;
-				margin-left: 1em;
-				margin-right: 1em;
-				z-index: 55;
-			margin-top: 2em;
-			opacity:;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1em;
+	margin: 2em 1em 0 1em;
+	z-index: 55;
 }
 
+/* BUTTONS */
 .group1 button{
-				padding-left: 30px;
-				padding-right: 30px;
-				padding-top: 5px ;
-				padding-bottom:5px ;
-				font-weight: bold;
-				font-family: Poppins;
-	    z-index: 4444;
-	    border: 2px solid red;
+	padding: 6px 10px;
+	font-weight: bold;
+	font-family: Poppins;
+	z-index: 4444;
+	border: 2px solid red;
+	background: white;
+	font-size: 14px;
 }
+
 .group1 button:hover{
-				background: white;
-				border: 2px solid black;
+	background: white;
+	border: 2px solid black;
 }
 
+/* ASK BOX */
 .ask{
-				
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				flex-direction: column;
-				border-radius: 5px;
-			z-index: 5555555;
-				padding-top: 1em;
-				padding-bottom: 1em;
-				text-align: center;
-				margin-top: em;
-			position: relative;											
-										
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 5px;
+	z-index: 5555555;
+	padding: 1em;
+	text-align: center;
+	position: relative;
 }
 
+/* YES / NO */
 .btn{
-				display: flex;
-				justify-content:center;
-				align-items: center;
-				gap: 2em;				
+	display: flex;
+	justify-content:center;
+	align-items: center;
+	gap: 1.5em;
+	flex-wrap: wrap;
+}
+
+#btn1,
+#btn2{
+	padding: 6px 18px;
+	font-weight: bold;
+	font-family: Poppins;
+	font-size: 14px;
 }
 
 #btn1{
-				padding-left: 30px;
-				padding-right: 30px;
-				padding-top: 5px ;
-				padding-bottom:5px ;
-				font-weight: bold;
-				font-family: Poppins;
-				border: 2px solid black;
+	border: 2px solid black;
 }
-#btn1:hover{
-				background: white;
-				border: 2px solid black;
-}
-#btn2:hover{
-				background: white;
-				border: 2px solid black;
-}
+
 #btn2{
-				padding-left: 30px;
-				padding-right: 30px;
-				padding-top: 5px ;
-				padding-bottom:5px ;
-				font-weight: bold;
-				font-family: Poppins;
-				border: 2px solid red;
-				
-	
+	border: 2px solid red;
 }
 
+#btn1:hover,
+#btn2:hover{
+	background: white;
+	border: 2px solid black;
+}
+
+/* TEXT */
 .crush{
-				font-size: 25px;
-				margin-bottom: 2em;
-				font-weight: bold;
-				color: red;
+	font-size: 20px; /* dati 25px */
+	margin-bottom: 1em;
+	font-weight: bold;
+	color: red;
 }
+
+/* HAND */
 #hands{
-				width: 50px;
-				position: absolute;
-				top: 12em;
-				left: 4em;
-				animation: bounce2 2s ease infinite;
-				opacity: 0;
-}
-#sadman{
-				transform: translateY(-2em);		
-				opacity: 0;
-}
-#hang{
-		transform: translateY(-4em);		
-		opacity: 0;
-}
-#frog{
-				transform: translateY(-4em);	
-				opacity: 0;	
+	width: 35px; /* dati 50px */
+	position: absolute;
+	top: 10em;
+	left: 1em;
+	animation: bounce2 2s ease infinite;
+	opacity: 0;
 }
 
-#hahahuhu{
-				opacity: 0;
-}
+/* HIDDEN IMAGES (HINDI GINALAW) */
+#sadman{ transform: translateY(-2em); opacity: 0; }
+#hang{ transform: translateY(-4em); opacity: 0; }
+#frog{ transform: translateY(-4em); opacity: 0; }
+#hahahuhu{ opacity: 0; }
+#sadcat{ opacity: 0; }
+#sadboi{ opacity: 0; }
+#crying{ opacity: 0; }
+#sadsad{ opacity: 0; }
 
-#sadcat{
-				opacity: 0;
-}
-#sadboi{
-				opacity: 0;
-}
-
-#crying{
-				opacity: 0;
-}
-#sadsad{
-				opacity: 0;
-}
-
-
+/* ANIMATION – SAME NAME */
 @keyframes bounce2 {
-	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-	40% {transform: translateY(-20px);}
-	60% {transform: translateY(-15px);}
+	0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+	40% { transform: translateY(-20px); }
+	60% { transform: translateY(-15px); }
 }
 
-/*BUTTONS OPACITY*/
-
-#btt1{
-				opacity: 0;
-}
-#btt2{
-				opacity: 0;
-}
-#btt3{
-				opacity: 0;
-}
-#btt4{
-				opacity: 0;
-}
-#btt5{
-				opacity: 0;
-}
-#btt6{
-				opacity: 0;
-}
-#btt7{
-				opacity: 0;
-}
-#btt8{
-				opacity: 0;
-}
-#btt9{
-				opacity: 0;
-}
-#btt10{
-				opacity: 0;
-}
-#btt11{
-				opacity: 0;
-}
-#btt12{
-				opacity: 0;
+/* BUTTON OPACITY – HINDI GINALAW */
+#btt1,#btt2,#btt3,#btt4,#btt5,#btt6,
+#btt7,#btt8,#btt9,#btt10,#btt11,#btt12,
+#bbtt1,#bbtt2,#bbtt3,#bbtt4,#bbtt5,#bbtt6,
+#bbtt7,#bbtt8,#bbtt9,#bbtt10,#bbtt11,#bbtt12{
+	opacity: 0;
 }
 
-       /*BUTTONS2 OPACITY*/
-#bbtt1{
-				opacity: 0;
-}
-#bbtt2{
-				opacity: 0;
-}
-#bbtt3{
-				opacity: 0;
-}
-#bbtt4{
-				opacity: 0;
-}
-#bbtt5{
-				opacity: 0;
-}
-#bbtt6{
-				opacity: 0;
-}
-#bbtt7{
-				opacity: 0;
-}
-#bbtt8{
-				opacity: 0;
-}
-#bbtt9{
-				opacity: 0;
-}
-#bbtt10{
-				opacity: 0;
-}
-#bbtt11{
-				opacity: 0;
-}
-#bbtt12{
-				opacity: 0;
-}
-
+/* FOOTER */
 .fff{
-display: flex;
-				justify-content: center;
-				align-items: center;
-}
-body {
-  margin: 0;
-  padding: 0;
-  background: url('qt/bg1.gif') no-repeat center center fixed;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 1em;
 }
 
+/* SMALL PHONES (IPHONE SE / MINI) */
+@media (max-width: 375px){
+	.group1{
+		grid-template-columns: repeat(2, 1fr);
+	}
 
+	.images1 img{
+		max-width: 110px;
+	}
+
+	.crush{
+		font-size: 18px;
+	}
+}
